[package]
name = "run_in_ns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
nix = {version = "0.28.0", features= ["fs", "mount", "sched"] }
rtnetlink = "0.14.1"
tokio = {version = "1.37.0", features = ["full"] }
